<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar_title_save"></include>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelLayoutStyle">

                <EditText
                    android:id="@+id/edit_clinic_name"
                    style="@style/add_appointment_details_input_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clinic_name"
                    android:inputType="textCapSentences"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabelLayoutStyle">

                <EditText
                    android:id="@+id/edit_address"
                    style="@style/add_appointment_details_input_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street_address"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabelLayoutStyle">

                <EditText
                    android:id="@+id/edit_landmark"
                    style="@style/add_appointment_details_input_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/landmark"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabelLayoutStyle">

                <EditText
                    android:id="@+id/edit_locality"
                    style="@style/add_appointment_details_input_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/locality"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabelLayoutStyle">

                <AutoCompleteTextView
                    android:id="@+id/autotv_city"
                    style="@style/add_appointment_details_input_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/arrow_down_drug"
                    android:hint="@string/city"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/country"
                android:textColor="@color/grey_light_text"
                android:textSize="@dimen/text_size_floating_label" />

            <com.healthcoco.healthcocopad.views.CustomAutoCompleteTextView
                android:id="@+id/autotv_country"
                style="@style/add_appointment_details_input_edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow_down_drug"
                android:editable="false"
                android:hint="@string/select"
                android:singleLine="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabelLayoutStyle">

                <EditText
                    android:id="@+id/edit_pincode"
                    style="@style/add_appointment_details_input_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/pincode"
                    android:inputType="phone"
                    android:maxLength="@integer/max_pincode_length"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabelLayoutStyle"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edit_state"
                    style="@style/add_appointment_details_input_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>