<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_20_dp"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_serving_type"
            style="@style/assesment_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_20_dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/arrow_down_drug"
            android:hint="@string/serving_type"
            android:paddingRight="@dimen/layout_padding"
            android:textSize="@dimen/text_size_registration_title" />

        <EditText
            android:id="@+id/edit_value"
            style="@style/assesment_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/value"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_type"
            style="@style/assesment_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20_dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/arrow_down_drug"
            android:hint="@string/type"
            android:paddingRight="@dimen/layout_padding" />

    </LinearLayout>
</LinearLayout>
