<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar_title_save" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_20_dp"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_exercise_type"
            style="@style/assesment_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_20_dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/arrow_down_drug"
            android:hint="@string/exercise"
            android:paddingRight="@dimen/layout_padding"
            android:textSize="@dimen/text_size_registration_title" />

        <EditText
            android:id="@+id/edit_minutes_per_day"
            style="@style/assesment_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20_dp"
            android:layout_marginRight="@dimen/layout_padding_5dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:hint="@string/value"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_20_dp"
            android:layout_weight="0.5"
            android:paddingRight="@dimen/layout_padding"
            android:text="@string/min_per_day"
            android:textSize="@dimen/text_size_registration_title" />

        <EditText
            android:id="@+id/edit_time_per_week"
            style="@style/assesment_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20_dp"
            android:layout_marginRight="@dimen/layout_padding_5dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:hint="@string/value"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_20_dp"
            android:layout_weight="0.5"
            android:paddingRight="@dimen/layout_padding"
            android:text="@string/time_per_week"
            android:textSize="@dimen/text_size_registration_title" />


    </LinearLayout>
</LinearLayout>
