<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_background">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="@color/blue_action_bar"
            android:textSize="@dimen/actionbar_title_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/img_filter_popup_normal" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_all_patients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:padding="10dp"
        android:text="@string/all_patients"
        android:textColor="@drawable/text_blue_black_selector" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/grey_light_divider" />

    <TextView
        android:id="@+id/tv_recently_visited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:padding="10dp"
        android:text="@string/recently_visited"
        android:textColor="@drawable/text_blue_black_selector"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/grey_light_divider"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_most_visited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:padding="10dp"
        android:text="@string/most_visited"
        android:textColor="@drawable/text_blue_black_selector"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/grey_light_divider"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_recently_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:padding="10dp"
        android:text="@string/recently_added"
        android:textColor="@drawable/text_blue_black_selector" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/grey_light_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/groups"
            android:textColor="@color/blue_action_bar"
            android:textSize="@dimen/actionbar_title_size" />

        <ImageButton
            android:id="@+id/bt_add_to_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/icon_add_reference_normal" />
    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.healthcoco.healthcocopad.views.ListViewLoadMore
                android:id="@+id/lv_groups"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:divider="@color/grey_light_divider"
                android:dividerHeight="1dp"
                android:visibility="gone"></com.healthcoco.healthcocopad.views.ListViewLoadMore>

            <TextView
                android:id="@+id/tv_no_groups"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/no_groups"
                android:textSize="@dimen/text_size_no_results"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>